[package]
name = "ask"
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
opt-level = "z"
strip = true

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
config = { version = "0.15.11", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
dirs = "6.0.0"
reqwest = { version = "0.12.19", features = ["blocking", "json"] }
termimad = "0.33.0"
anyhow = "1.0.98"
indicatif = "0.17.11"
