[package]
name = "ask"
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
opt-level = "z"
strip = true

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
config = { version = "0.15.14", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
dirs = "6.0.0"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
anyhow = "1.0.99"
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = "0.29.0"
tui-markdown = "0.3.5"
pulldown-cmark = "0.13.0"

[build-dependencies]
windows_exe_info = "0.5.2"
